# ft-insula

./: .gitattributes  .gitignore  README.md  environment2.yml  ft-insula.code-workspace  pyproject.toml
ENIGMA/enigmatoolbox.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
ENIGMA/enigmatoolbox/datasets/: base.py
ENIGMA/enigmatoolbox/plotting/: surface_plotting.py
mne_data/MNE-sample-data/subjects/cvs_avg35_inMNI152-Lausanne2008-125/label/: lh.DLPFC.label  lh.DLPFC_IFG.label  lh.IFG.label  lh.Lau125.annot  lh.caudalanteriorcingulate_1.label  lh.caudalmiddlefrontal_1.label  lh.caudalmiddlefrontal_2.label  lh.corpuscallosum.label  lh.entorhinal_1.label  lh.fusiform_4.label  lh.inferiorparietal_1.label  lh.inferiorparietal_2.label  lh.inferiorparietal_3.label  lh.inferiortemporal_2.label  lh.insula_1.label  lh.insula_3.label  lh.lateraloccipital_3.label  (+86 more)
parcellation_definitions/: DKT.txt  Lausanne2008-33.txt  Lausanne2008-60.txt  Lausanne2018-scale1.txt  Lausanne2018-scale2.txt  Lausanne2018-scale2_oldCP.txt  Lausanne2018-scale3.txt  Lausanne2018-scale5.txt  MNI-AAL2.txt  MNI-AAL3.txt  MNI-AICHA.txt  MNI-BrodmannDilate.txt  MNI-HCP-MMP1.txt  MNI-Hammers.txt  MNI-JulichBrain-3.0.txt  MNI-JulichBrain-3.0_oldCP.txt  MNI-JulichBrain.txt  MNI-Lausanne2008-125.txt  MNI-Lausanne2008-250.txt  MNI-Lausanne2008-33.txt  MNI-Lausanne2008-500.txt  MNI-Lausanne2018-scale1.txt  MNI-Lausanne2018-scale3.txt  MNI-Lausanne2018-scale4.txt  MNI-VEP.txt  MNI-insula.txt  MarsAtlas.txt  all_parcellation_names.txt
src/scripts/: analyze_atlas.py  compare_atlas.py  dictROIs_Insula.py
(+2588 files in other folders)
